# hiccup

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  ccup.sh
include/hiccup/ccup/: enum_cast.h  eq_helper.h  link.h  link_node.h  object_allocator.h  optional_ptr.h  placement.h  type_id.h  unique_name.h
include/hiccup/executor/: alert.h  clean.h  wifi.h
include/hiccup/infra/: enum_cast.h  eq_helper.h  link.h  link_node.h  object_allocator.h  optional_ptr.h  placement.h  type_id.h  unique_name.h
include/hiccup/storage/: storage.h
src/: CMakeLists.txt  main.cpp
src/executor/: alert.cpp  alert.h  clean.cpp  clean.h  executor.cpp  executor.h  point.cpp  point.h
src/storage/: storage.c
test/: CMakeLists.txt
test/ccup/: test_enum_cast.cpp  test_link.cpp  test_object_allocator.cpp  test_type_id.cpp
test/ccup/cpp/: test_cpp_feature.cpp
test/ccup/std/: test_std_any.cpp  test_std_optional.cpp  test_std_variant.cpp
test/executor/: test_executor.cpp  test_point.cpp
test/infra/: test_enum_cast.cpp  test_link.cpp  test_object_allocator.cpp  test_std_utils.cpp  test_type_id.cpp
test/storage/: test_storage.cpp
